--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ColleguesFront</title>
+  <title>Administration Collegues</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
 
 <body style="background-color: #43464a">
   <app-root></app-root>
+
 </body>
 
 </html>
