--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
 
-<body style="background-color: #43464a">
+<body style="background-color: #e6e2db">
   <app-root></app-root>
-
 </body>
 
 </html>
